--- a/PackerTracker/Views/Food/New.cshtml
+++ b/PackerTracker/Views/Food/New.cshtml
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Packer Tracker</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
-    <h4>Add some food to your pack!</h4>
-    <form action="/food/new" method="post">
-      <label for="description">Add a new item</label>
-      <input id="description" name="description" type="text">
-      <button type="submit">Submit</button>
-    </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Packer Tracker</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body>
+  @using PackerTracker.Models;
+
+  <h4>Add some food to your pack!</h4>
+  <form action="/food" method="post">
+    <label for="name">Add a food name</label>
+    <input id="name" name="name" type="text">
+    <br>
+    <label for="weight">How much does it weigh (lbs)?</label>
+    <input id="weight" name="weight" type="number" step="0.01" value="0.00" placeholder="0.00" min="0.00">
+    <br>
+    <label for="price">How much does it cost ($)?</label>
+    <input id="price" name="price" type="number" step="0.01" value="0.00" placeholder="0.00" min="0.00">
+    <br>
+    <label for="purchaseStatus">Is it purchased yet?!</label>
+    <input id="purchaseStatus" name="purchaseStatus" type="checkbox">
+    <br>
+    <label for="packedStatus">Did you pack it yet?!</label>
+    <input id="packedStatus" name="packedStatus" type="checkbox">
+    <br>
+    <label for="category">Food Category:</label>
+    <select id="category" name="category" type="dropdown">
+      @foreach (string category in Enum.GetNames<Food.CategoryType>())
+      {
+        <option value="@category">@category</option>
+      }
+    </select>
+    <br>
+    <button type="submit">Submit</button>
+
+  </form>
+</body>
+
 </html>
