update find method to use SQL datanase and updated controller and views
co-authored-by: Emma Gerigscott <elgerig@gmail.com>
co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/PackerTracker/Views/Food/Show.cshtml
+++ b/PackerTracker/Views/Food/Show.cshtml
@@ -26,6 +26,6 @@
   </ul>
     <a href='/food/new'>Add more yum yum!</a>
     <br>
-    <a href='/gear'>View all items</a>
+    <a href='/food'>View all food items</a>
   </body>
 </html>
