--- a/PackerTracker/Views/Home/Index.cshtml
+++ b/PackerTracker/Views/Home/Index.cshtml
@@ -14,6 +14,6 @@
     <h2>Pack For Your Camping Trip!</h2>
     <a href='/food/new'>Add new gear to pack</a>
     <br>
-    <a href='/gear'>See list of all the gear you're packing</a>
+    <a href='/food'>See list of all the food you're packing</a>
   </body>
 </html>
