--- a/PackerTracker/Views/Food/Index.cshtml
+++ b/PackerTracker/Views/Food/Index.cshtml
@@ -28,7 +28,7 @@
 
     <a href='/food/new'>Add new gear to pack</a>
     <br>
-    <a href='/gear'>See list of all the gear you're packing</a>
+    <a href='/food'>See list of all the food you're packing</a>
 
 
   </body>
